--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
     <artifactId>LeiauteNFe_v4.00</artifactId>
     <version>4.0</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
